bonus content alignment fix

--- a/site/styles/_swiper.scss
+++ b/site/styles/_swiper.scss
@@ -2,6 +2,9 @@
   padding: 0;
   position: relative;
   margin: 0 auto;
+  @include media-breakpoint-up(sm){
+    margin-left: -55px;
+  }
 }
 
 .swiper-container {
